BugFix : 프로필 페이지 매너 평가 수정 - 다른 매너평가가 두개 이상일때 border가 계속 생기는 현상 수정,   매너 평가 사이의 gap 수정 resolves #33

--- a/src/pages/UserPage/user.css
+++ b/src/pages/UserPage/user.css
@@ -231,6 +231,9 @@
   }
   /* 매너평가 */
   .user--profile-manner-wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 11.5px;
     padding: 14px 10px;
     border-bottom: 0.3px solid var(--Contents-contentSecondary);
     .user--profile-manner-detail {
